--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=FishShip
 
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 # JPA ?? (?? ??)
 spring.jpa.hibernate.ddl-auto=update
