--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/properties
-/env.properties
+/src/main/resources/env.properties
 
 ### STS ###
 .apt_generated
