--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swagger 의존성
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'  // jwt 토큰
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'  // jwt 토큰
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3' // jwt 토큰
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.security:spring-security-oauth2-jose'
 	implementation 'com.h2database:h2'
