--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jwt.secret = ${JWT_CODE}
+spring.jwt.access-secret = ${JWT_ACCESS_CODE}
+spring.jwt.refresh-secret = ${JWT_REFRESH_CODE}
