refactor : swagger 문서화 위한 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jwt.access-secret = ${JWT_ACCESS_CODE}
 spring.jwt.refresh-secret = ${JWT_REFRESH_CODE}
+
+springdoc.swagger-ui.path=/swagger
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-query-params-without-oauth2=true
+springdoc.paths-to-match=/api/**
