--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,16 @@ springdoc.swagger-ui.path=/swagger
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.display-query-params-without-oauth2=true
 springdoc.paths-to-match=/api/**
+
+# NAVER API
+spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENTID}
+spring.security.oauth2.client.registration.naver.client-secret=${NAVER_SERCRET}
+#spring.security.oauth2.client.registration.naver.redirect-uri=http://3.34.157.88:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.client-name=naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
