feat : 소셜 로그인 개발 진행 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,7 @@ springdoc.paths-to-match=/api/**
 
 # NAVER API
 spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENTID}
-spring.security.oauth2.client.registration.naver.client-secret=${NAVER_SERCRET}
-#spring.security.oauth2.client.registration.naver.redirect-uri=http://3.34.157.88:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.client-secret=${NAVER_SECRET}
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.client-name=naver
