--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,37 @@
 version: '3.8'
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: knowme_app
+    ports:
+      - "${APP_PORT:-8000}:8080"
+    environment:
+      - CHROMA_URL=http://chromadb:8000
+      - MYSQL_HOST=mysql
+      - MYSQL_PORT=3306
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
+      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
+      - JWT_ACCESS_CODE=${JWT_ACCESS_CODE}
+      - JWT_REFRESH_CODE=${JWT_REFRESH_CODE}
+    depends_on:
+      - chromadb
+      - mysql
+      - rabbitmq
+      - minio
+    restart: unless-stopped
+    networks:
+      - knowme-network
   chromadb:
     image: chromadb/chroma:latest
     container_name: chromadb
@@ -47,7 +78,7 @@ services:
       - knowme-network
 
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2024-12-18T13-15-44Z
     container_name: minio
     ports:
       - "${MINIO_API_PORT:-9000}:9000"
