--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=FishShip
 
+server.address=0.0.0.0
 
-spring.datasource.url=jdbc:mysql://localhost:3306/fishship
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}/${MYSQL_DATABASE}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
