--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'  // jwt 토큰
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'  // jwt 토큰
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3' // jwt 토큰
+	implementation 'org.springframework.boot:spring-boot-starter-amqp' // RabbitMQ
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.security:spring-security-oauth2-jose'
 	implementation 'com.h2database:h2'
