--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+# Application
+APP_PORT=8000
+
+JWT_ACCESS_CODE=asdf
+JWT_REFRESH_CODE=asdf
+
+NAVER_SECRET=your_naver_secret
+NAVER_CLIENTID=your_naver_clientid
+
 # Chroma DB
 CHROMA_PORT=8000
 
