--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=FishShip
 
+spring.config.import=optional:file:.env[.properties]
+
 server.address=0.0.0.0
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}/${MYSQL_DATABASE}
