fix : 로그인 로직 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=FishShip
-
 spring.config.import=optional:file:.env[.properties]
 
 server.address=0.0.0.0
@@ -25,7 +24,7 @@ springdoc.paths-to-match=/api/**
 # NAVER API
 spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENTID}
 spring.security.oauth2.client.registration.naver.client-secret=${NAVER_SECRET}
-spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.redirect-uri=http://hserver.tunnel.jaram.net/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.client-name=naver
 
