Add MinIO file upload service and related configurations
- Implement MinioConfig for MinIO client configuration.
- Create MinioService for handling file uploads to MinIO.
- Add FileController for REST API endpoints to upload files.
- Introduce DTOs for file upload responses and errors.
- Update application properties for MinIO configuration.
- Add README documentation for file upload service.
- Include unit tests for MinioService functionality.
- Update .env.example with MinIO environment variables.

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.security:spring-security-oauth2-jose'
 	implementation 'com.h2database:h2'
+	implementation 'io.minio:minio:8.5.7' // MinIO 클라이언트
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
