--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ MINIO_API_PORT=9000
 MINIO_CONSOLE_PORT=9001
 MINIO_ROOT_USER=minio_admin
 MINIO_ROOT_PASSWORD=your_minio_password
+MINIO_BUCKET=knowme-bucket
+MINIO_ACCESS_KEY=your_minio_access_key
+MINIO_SECRET_KEY=your_minio_secret_key
