--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,13 @@ MYSQL_USER=knowme_user
 MYSQL_PASSWORD=your_mysql_password
 
 # RabbitMQ
+RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_MANAGEMENT_PORT=15672
 RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=your_rabbitmq_password
+RABBITMQ_USERNAME=admin
+RABBITMQ_VIRTUAL_HOST=/
 
 # MinIO
 MINIO_API_PORT=9000
