--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,14 @@ spring.config.import=optional:file:.env[.properties]
 
 server.address=0.0.0.0
 
+# RabbitMQ Configuration
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USER:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+spring.rabbitmq.virtual-host=${RABBITMQ_VIRTUAL_HOST:/}
+
+# Database Configuration
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}/${MYSQL_DATABASE}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${MYSQL_USER}
